Melhorias no formulário: máscara de telefone e validações

--- a/templates/viagens/html/cotacao.html
+++ b/templates/viagens/html/cotacao.html
@@ -65,5 +65,19 @@
 <script>
   AOS.init();
 </script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+<!-- jQuery Mask Plugin -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+<script>
+$(document).ready(function(){
+  $('#id_telefone').mask('(00) 00000-0000');
+});
+</script>
+
+
+
 
 {% include "viagens/html/rodape.html" %}
