--- a/templates/viagens/html/rodape.html
+++ b/templates/viagens/html/rodape.html
@@ -78,7 +78,7 @@
     </a>
 
     <!-- WhatsApp -->
-    <a href="https://wa.me/5551997452112" target="_blank"
+    <a href="https://wa.me/5551997452112?text=Olá,%20gostaria%20de%20solicitar%20um%20orçamento%20com%20a%20Desperte%20Viagens!" target="_blank"
       class="btn rounded-circle text-white social-icon"
       style="background-color: #25D366; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
       <i class="fab fa-whatsapp"></i>
