--- a/templates/viagens/html/home.html
+++ b/templates/viagens/html/home.html
@@ -1,20 +1,19 @@
 {% load static %}
 {% include "viagens/html/menu.html" %}
 
-<!-- AOS CSS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<!-- Estilos Locais -->
+<link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
 
 <!-- Seção principal -->
 <div class="container py-5 d-flex justify-content-center align-items-center" style="min-height: 80vh;">
   <div class="row align-items-center w-100">
 
-   
     <!-- Texto -->
     <div class="container py-5 text-center" data-aos="fade-down">
-        <h1 class="text-primary fw-bold mb-3">REALIZE COM A DESPERTE</h1>
-        <p class="lead">A viagem dos seus sonhos começa aqui. Roteiros sob medida, atendimento personalizado e experiências inesquecíveis.</p>
-        <a href="{% url 'cotacao' %}" class="btn btn-success mt-3">Solicitar Orçamento</a>
-      </div>
+      <h1 class="text-primary fw-bold mb-3">REALIZE COM A DESPERTE</h1>
+      <p class="lead">A viagem dos seus sonhos começa aqui. Roteiros sob medida, atendimento personalizado e experiências inesquecíveis.</p>
+      <a href="{% url 'cotacao' %}" class="btn btn-success mt-3">Solicitar Orçamento</a>
+    </div>
 
   </div>
 </div>
@@ -37,7 +36,7 @@
 
       <!-- Slide 2 -->
       <div class="carousel-item">
-        <img src="{% static 'images/gramado.jpg' %}" class="d-block w-100 rounded shadow"  style="height: 600px;" alt="Gramado">
+        <img src="{% static 'images/gramado.jpg' %}" class="d-block w-100 rounded shadow" style="height: 600px;" alt="Gramado">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
           <h5>Gramado, Brasil</h5>
           <p>Romance e gastronomia no coração da Serra Gaúcha.</p>
@@ -65,8 +64,8 @@
   </div>
 </div>
 
-<!-- AOS Script -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!-- Scripts Locais -->
+<script src="{% static 'vendor/aos/aos.js' %}"></script>
 <script>
   AOS.init();
 </script>
