--- a/templates/viagens/html/menu.html
+++ b/templates/viagens/html/menu.html
@@ -73,6 +73,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'nossos_agentes' %}"><i class="fas fa-user-tie me-1"></i> Nossos Agentes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'produtos' %}"><i class="fas fa-suitcase-rolling me-1"></i> Produtos</a>
+        </li>
       </ul>
     </div>
   </div>
