Adicionando o schema.org ao menu

--- a/templates/viagens/html/menu.html
+++ b/templates/viagens/html/menu.html
@@ -38,7 +38,32 @@
       
     }
   </style>
-  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "Desperte Viagens",
+  "url": "https://desperteviagens.com.br",
+  "logo": "https://desperteviagens.com.br/static/images/logo.png",
+  "description": "Agência de viagens especializada em roteiros personalizados, experiências únicas e atendimento humanizado.",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Rua das Pereiras, 569 - Montanha",
+    "addressLocality": "Lajeado",
+    "addressRegion": "RS",
+    "postalCode": "95900-000",
+    "addressCountry": "BR"
+  },
+  "telephone": "+55 51 99745-2112",
+  "email": "contato@desperteviagens.com.br",
+  "openingHours": "Mo-Fr 08:00-18:00",
+  "sameAs": [
+    "https://www.instagram.com/desperteviagens",
+    "https://www.facebook.com/desperteviagens"
+  ]
+}
+</script>
+
 </head>
 
 <body>
