--- a/templates/viagens/html/depoimentos.html
+++ b/templates/viagens/html/depoimentos.html
@@ -1,10 +1,13 @@
+{% extends "viagens/html/base.html" %}
 {% load static %}
-{% include "viagens/html/menu.html" %}
 
-<!-- Estilos -->
-<link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
+{% block title %}Depoimentos - Desperte Viagens{% endblock %}
 
-<!-- Conteúdo -->
+{% block head_extra %}
+  <link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
+{% endblock %}
+
+{% block content %}
 <div class="container py-5">
   <h2 class="text-center text-primary mb-5" data-aos="fade-down">O que dizem nossos viajantes</h2>
 
@@ -34,11 +37,9 @@
     </div>
   </div>
 </div>
+{% endblock %}
 
-<!-- Scripts -->
-<script src="{% static 'vendor/aos/aos.js' %}"></script>
-<script>
-  AOS.init();
-</script>
-
-{% include "viagens/html/rodape.html" %}
+{% block scripts_extra %}
+  <script src="{% static 'vendor/aos/aos.js' %}"></script>
+  <script>AOS.init();</script>
+{% endblock %}
