--- a/templates/viagens/html/home.html
+++ b/templates/viagens/html/home.html
@@ -1,20 +1,21 @@
+{% extends "viagens/html/base.html" %}
 {% load static %}
-{% include "viagens/html/menu.html" %}
 
-<!-- Estilos Locais -->
-<link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
+{% block title %}Desperte Viagens - Início{% endblock %}
 
+{% block head_extra %}
+  <link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
+{% endblock %}
+
+{% block content %}
 <!-- Seção principal -->
 <div class="container py-5 d-flex justify-content-center align-items-center" style="min-height: 80vh;">
   <div class="row align-items-center w-100">
-
-    <!-- Texto -->
     <div class="container py-5 text-center" data-aos="fade-down">
       <h1 class="text-primary fw-bold mb-3">REALIZE COM A DESPERTE</h1>
       <p class="lead">A viagem dos seus sonhos começa aqui. Roteiros sob medida, atendimento personalizado e experiências inesquecíveis.</p>
       <a href="{% url 'cotacao' %}" class="btn btn-success mt-3">Solicitar Orçamento</a>
     </div>
-
   </div>
 </div>
 
@@ -25,27 +26,24 @@
   <div id="carouselDestinos" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
 
-      <!-- Slide 1 -->
       <div class="carousel-item active">
-        <img src="{% static 'images/machu.jpg' %}" class="d-block w-100 rounded shadow" style="height: 600px;" alt="Machu Picchu">
+        <img src="{% static 'images/machu.jpg' %}" class="carousel-img d-block w-100 rounded shadow" alt="Machu Picchu">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
           <h5>Machu Picchu, Peru</h5>
           <p>Descubra os mistérios dos Andes em uma aventura inesquecível.</p>
         </div>
       </div>
 
-      <!-- Slide 2 -->
       <div class="carousel-item">
-        <img src="{% static 'images/gramado.jpg' %}" class="d-block w-100 rounded shadow" style="height: 600px;" alt="Gramado">
+        <img src="{% static 'images/gramado.jpg' %}" class="carousel-img d-block w-100 rounded shadow" alt="Gramado">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
           <h5>Gramado, Brasil</h5>
           <p>Romance e gastronomia no coração da Serra Gaúcha.</p>
         </div>
       </div>
 
-      <!-- Slide 3 -->
       <div class="carousel-item">
-        <img src="{% static 'images/maldivas.jpg' %}" class="d-block w-100 rounded shadow" style="height: 600px;" alt="Maldivas">
+        <img src="{% static 'images/maldivas.jpg' %}" class="carousel-img d-block w-100 rounded shadow" alt="Maldivas">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
           <h5>Maldivas</h5>
           <p>Relaxe em águas cristalinas com bangalôs de luxo sobre o mar.</p>
@@ -63,11 +61,9 @@
     </button>
   </div>
 </div>
+{% endblock %}
 
-<!-- Scripts Locais -->
+{% block scripts_extra %}
 <script src="{% static 'vendor/aos/aos.js' %}"></script>
-<script>
-  AOS.init();
-</script>
-
-{% include "viagens/html/rodape.html" %}
+<script>AOS.init();</script>
+{% endblock %}
