--- a/templates/viagens/html/menu.html
+++ b/templates/viagens/html/menu.html
@@ -69,17 +69,17 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: rgb(255, 159, 5); z-index: 999;">
+  <div class="container px-3">
     <a class="navbar-brand fw-bold" href="{% url 'home' %}">Desperte Viagens</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar menu">
+  <span class="navbar-toggler-icon"></span>
+</button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav gap-3">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto gap-2">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home me-1"></i> Início</a>
         </li>
@@ -105,6 +105,7 @@
     </div>
   </div>
 </nav>
+
 
 <!-- Ajuste para compensar o menu fixo -->
 <div style="height: 80px;"></div>
