--- a/templates/viagens/html/rodape.html
+++ b/templates/viagens/html/rodape.html
@@ -95,4 +95,6 @@
         &copy; {% now "Y" %} Desperte Viagens. Todos os direitos reservados.
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </footer>
